--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
-    <script defer src="./app.js"></script>
+    <script defer src="./app.ts"></script>
   </body>
 </html>
