--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
-    <script defer src="./app.ts"></script>
+    <script defer src="./src/app.ts"></script>
   </body>
 </html>
+a
